<resources>
    <string name="app_name">Nilla Food</string>
    <string name="carbs_format">Carbs: %.1fg</string>
    <string name="protein_format">Protein: %.1fg</string>
    <string name="fat_format">Fat: %.1fg</string>
    <string name="delete">X</string>
    <string name="timestamp_hint">Date &amp; Time</string>
    <string name="tab_meals">Meals</string>
    <string name="tab_injections">Inject</string>
    <string name="tab_insulin">Insulin</string>
    <string name="tab_nightscout">Stats</string>
    <string name="last_scan_format">Last %1$s Pen Scan %2$d hours ago</string>
    <string name="average_glucose_placeholder">Average glucose loading...</string>
    <string name="average_glucose_format">24h Avg: %.1f mmol/L</string>
    <string name="average_glucose_7d_format">7d Avg: %.1f mmol/L</string>
    <string name="average_glucose_14d_format">14d Avg: %.1f mmol/L</string>
    <string name="time_in_range_24h">Time in Range (24h)</string>
    <string name="time_in_range_7d">Time in Range (7d)</string>
    <string name="time_in_range_14d">Time in Range (14d)</string>
    <string name="hba1c_placeholder">HbA1c loading...</string>
    <string name="sd_placeholder">SD loading...</string>
    <string name="hba1c_format">Est. HbA1c: %.1f mmol/mol</string>
    <string name="hba1c_days_format">Using last %1$d days of data</string>
    <string name="sd_format">SD: %.1f mmol/L</string>
    <string name="refresh">Refresh</string>
    <string name="master_refresh">Master Refresh</string>
    <string name="insulin_usage_heading_date">Date</string>
    <string name="insulin_usage_heading_novorapid">Bolus</string>
    <string name="insulin_usage_heading_tresiba">Basil</string>
    <string name="insulin_usage_heading_carbs">Carbs</string>
    <string name="insulin_usage_heading_protein">Protein</string>
    <string name="insulin_usage_heading_fat">Fat</string>
    <string name="meal_logged_title">Meal Logged</string>
    <string name="status_online">We Are Online</string>
    <string name="status_offline">We Are Offline</string>
    <string name="meal_logged_message">Carbs: %1$.1fg\nProtein: %2$.1fg\nFat: %3$.1fg\nNote: %4$s</string>
</resources>
