<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem

            android:text="@string/tab_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem

            android:text="@string/tab_insulin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_nightscout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.tabs.TabLayout>

    <include layout="@layout/layout_meals"/>

    <include layout="@layout/layout_insulin"/>

    <include layout="@layout/layout_nightscout"/>

</LinearLayout>


